kubernetes/talos/deploy/linkedin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linkedin-redirect
  namespace: home-assistant
  annotations: 
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`in.vandeneede.org`)
      kind: Rule
      middlewares:
        - name: redirect-to-linkedin
      services:
        - name: home-assistant
          port: 8123
